--- a/02-kubrick/sub-page/2001.html
+++ b/02-kubrick/sub-page/2001.html
@@ -9,7 +9,12 @@
 
         <link rel="stylesheet" type="text/css" href="../stylesheet/stylesheet-3.css">
 
-        <script src="../script/script-2.js"></script>
     </head>
-    <body></body>
+    <body>
+        <script
+        src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
+        <script src="../script/2001.js"></script>
+    </body>
 </html>
