--- a/02-kubrick/index.html
+++ b/02-kubrick/index.html
@@ -46,7 +46,7 @@
         src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
         crossorigin="anonymous"></script>
-        <script src="../script/main.js"></script> 
+        <script src="script/main.js"></script> 
 
     </body>
 
