--- a/02-kubrick/sub-page/kubrick-site.html
+++ b/02-kubrick/sub-page/kubrick-site.html
@@ -540,7 +540,7 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
         crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
-        <script src="../script/script-01.js"></script>
+        <script src="../script/kubrick.js"></script>
     </body>
     
 </html>
