--- a/02-kubrick/sub-page/kubrick-site.html
+++ b/02-kubrick/sub-page/kubrick-site.html
@@ -23,7 +23,7 @@
                 <div class ="left-container">
                 <!-- Title -->
                     <div class="title">
-                        <p class="back-button"><a href="../index.html"><span style="font-size:4em;">&#9732;</span> </a></p>
+                        <p class="back-button"><a href="../index.html">&larr;</a></p>
                         <h1>
                             The Kubrick Site
                         </h1>
