--- a/02-kubrick/sub-page/faq.html
+++ b/02-kubrick/sub-page/faq.html
@@ -350,6 +350,7 @@
             <div class="ui-draggable ui-draggable-handle" id="handle">
             </div>
         </div>
+        <sript src="../libraries/p5.min.js"></sript>
         <script
         src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
