--- a/03-generators/index.html
+++ b/03-generators/index.html
@@ -16,11 +16,9 @@
                 <h1>COLLAGE<br>GENERATOR</h1>
             </div>
             <div id="toolbar-container">
-                <p id="option-tag">Background color</p>
-                <p id="option-tag">Upload</p>
-                <p id="option-tag">Remake</p>
-                <p id="option-tag">Save </p>
-
+                <p>Choose images</p>
+                <div id="option-tag"></div>
+                <button class="button" onClick="window.location.href=window.location.href">Restart</button>
             </div>
             <div id="canvas-container">
             </div>
