--- a/03-generators/index.html
+++ b/03-generators/index.html
@@ -18,7 +18,7 @@
             <div id="toolbar-container">
                 <p>Choose images</p>
                 <div id="option-tag"></div>
-                <button class="button" onClick="window.location.href=window.location.href">Restart</button>
+                <button class="button-tag" onClick="window.location.href=window.location.href">Restart</button>
             </div>
             <div id="canvas-container">
             </div>
